--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ version: '3'
 
 services:
   proxy:
-    entrypoint: /config/entrypoint.sh
     build: .
-    command: bash -c "ls -a /src && ./server"
+    command: bash -c "ls -a /src && bash "
     volumes:
       - ./src:/src
     ports:
       - "4444:4444"
+    tty: true
