--- a/src/Makefile
+++ b/src/Makefile
@@ -1,14 +1,15 @@
 # You can compile with either gcc or g++
 CC = g++
-CFLAGS = -g -o
+CFLAGS = -g -o 
 LINKED = -lPocoNet -lPocoUtil -lPocoFoundation -lPocoCrypto -lPocoNetSSL -lssl -lcrypto
-OBJ = ProxyServerConnection.o ProxyRequestHandler.o ProxyRequestHandlerFactory.o proxy_server.o
+OBJ = ProxyServerConnection.o ProxyRequestHandler.o ProxyRequestHandlerFactory.o proxy_server.o #ProxyServerCache.o 
 
 all:
 	$(CC) -c proxy_server.cpp -std=c++11
 	$(CC) -c ProxyRequestHandler.cpp -std=c++11
 	$(CC) -c ProxyRequestHandlerFactory.cpp -std=c++11
 	$(CC) -c ProxyServerConnection.cpp -std=c++11
+	 # $(CC) -c ProxyServerCache.cpp -std=c++11		
 	$(CC) $(CFLAGS) proxy_server $(OBJ) $(LINKED) -std=c++11
 
 clean:
