--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     command: bash -c "ls -a && make all && ./proxy_server"
     volumes:
       - ./src:/src
+      - ./logs:/var/logs/erss/
     ports:
       - "12345:12345"
     tty: true
