--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - docker-compose --version
   - docker-compose pull
   - docker-compose build
-  - docker-compose up &
+  - docker-compose up -d
   - docker ps
 
 script: cd tests && ./tests.sh
